--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="Loading-Message">
-        <span>Loading, please wait...</span>
+        <span>Loading, just a sec...</span>
   </div>
 </body>
 </html>
